resolved button and recaptcha overlap

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -37,6 +37,7 @@
 }
 
 .users-text-container {
+  margin-top: 20px;
   padding-left: 4px;
   padding-top: 9px;
 }
@@ -50,6 +51,7 @@
 
   .users-text-container {
     display: block;
+    margin-top: 20px;
     padding-top: 6px;
   }
 }
@@ -107,6 +109,7 @@
 }
 
 .users-login-primary-button {
+  margin-top: 20px;
   padding: 8px 25px;
 }
 //login-register ends
